@@ -34,6 +34,7 @@ from fido2.ctap2 import (
     FPBioEnrollment,
     CaptureError,
 )
+from fido2.pcsc import CtapPcscDevice
 from yubikit.core.fido import FidoConnection
 from yubikit.core.smartcard import SW
 from time import sleep
@@ -48,6 +49,8 @@ from .util import cli_fail
 from ..fido import is_in_fips_mode, fips_reset, fips_change_pin, fips_verify_pin
 from ..hid import list_ctap_devices
 from ..device import is_fips_version
+from ..pcsc import list_devices as list_ccid
+from smartcard.Exceptions import NoCardException, CardConnectionException
 from typing import Optional
 
 import click
@@ -157,11 +160,54 @@ def reset(ctx, force):
     inserted, and requires a touch on the YubiKey.
     """
 
-    n_keys = len(list_ctap_devices())
-    if n_keys > 1:
-        cli_fail("Only one YubiKey can be connected to perform a reset.")
+    conn = ctx.obj["conn"]
 
-    is_fips = is_fips_version(ctx.obj["info"].version)
+    if isinstance(conn, CtapPcscDevice):  # NFC
+        readers = list_ccid(conn._name)
+        if not readers or readers[0].reader.name != conn._name:
+            logger.error(f"Multiple readers matched: {readers}")
+            cli_fail("Unable to isolate NFC reader.")
+        dev = readers[0]
+        logger.debug(f"use: {dev}")
+        is_fips = False
+
+        def prompt_re_insert():
+            click.echo(
+                "Remove and re-place your YubiKey on the NFC reader to perform the "
+                "reset..."
+            )
+
+            removed = False
+            while True:
+                sleep(0.5)
+                try:
+                    with dev.open_connection(FidoConnection):
+                        if removed:
+                            sleep(1.0)  # Wait for the device to settle
+                            break
+                except CardConnectionException:
+                    pass  # Expected, ignore
+                except NoCardException:
+                    removed = True
+            return dev.open_connection(FidoConnection)
+
+    else:  # USB
+        n_keys = len(list_ctap_devices())
+        if n_keys > 1:
+            cli_fail("Only one YubiKey can be connected to perform a reset.")
+        is_fips = is_fips_version(ctx.obj["info"].version)
+
+        def prompt_re_insert():
+            click.echo("Remove and re-insert your YubiKey to perform the reset...")
+
+            removed = False
+            while True:
+                sleep(0.5)
+                keys = list_ctap_devices()
+                if not keys:
+                    removed = True
+                if removed and len(keys) == 1:
+                    return keys[0].open_connection(FidoConnection)
 
     if not force:
         if not click.confirm(
@@ -170,31 +216,7 @@ def reset(ctx, force):
             err=True,
         ):
             ctx.abort()
-
-    def prompt_re_insert_key():
-        click.echo("Remove and re-insert your YubiKey to perform the reset...")
-
-        removed = False
-        while True:
-            sleep(0.5)
-            keys = list_ctap_devices()
-            if not keys:
-                removed = True
-            if removed and len(keys) == 1:
-                return keys[0]
-
-    def try_reset():
-        if not force:
-            dev = prompt_re_insert_key()
-            conn = dev.open_connection(FidoConnection)
-        with prompt_timeout():
-            if is_fips:
-                fips_reset(conn)
-            else:
-                Ctap2(conn).reset()
-
-    if is_fips:
-        if not force:
+        if is_fips:
             destroy_input = click_prompt(
                 "WARNING! This is a YubiKey FIPS device. This command will also "
                 "overwrite the U2F attestation key; this action cannot be undone and "
@@ -206,42 +228,39 @@ def reset(ctx, force):
             if destroy_input != "OVERWRITE":
                 cli_fail("Reset aborted by user.")
 
-        try:
-            try_reset()
+        conn = prompt_re_insert()
 
-        except ApduError as e:
-            logger.error("Reset failed", exc_info=e)
-            if e.code == SW.COMMAND_NOT_ALLOWED:
-                cli_fail(
-                    "Reset failed. Reset must be triggered within 5 seconds after the "
-                    "YubiKey is inserted."
-                )
+    try:
+        with prompt_timeout():
+            if is_fips:
+                fips_reset(conn)
             else:
-                cli_fail("Reset failed.")
-
-        except Exception as e:
-            logger.error("Reset failed", exc_info=e)
+                Ctap2(conn).reset()
+    except CtapError as e:
+        logger.error("Reset failed", exc_info=e)
+        if e.code == CtapError.ERR.ACTION_TIMEOUT:
+            cli_fail(
+                "Reset failed. You need to touch your YubiKey to confirm the reset."
+            )
+        elif e.code in (CtapError.ERR.NOT_ALLOWED, CtapError.ERR.PIN_AUTH_BLOCKED):
+            cli_fail(
+                "Reset failed. Reset must be triggered within 5 seconds after the "
+                "YubiKey is inserted."
+            )
+        else:
+            cli_fail(f"Reset failed: {e.code.name}")
+    except ApduError as e:  # From fips_reset
+        logger.error("Reset failed", exc_info=e)
+        if e.code == SW.COMMAND_NOT_ALLOWED:
+            cli_fail(
+                "Reset failed. Reset must be triggered within 5 seconds after the "
+                "YubiKey is inserted."
+            )
+        else:
             cli_fail("Reset failed.")
-
-    else:
-        try:
-            try_reset()
-        except CtapError as e:
-            logger.error(e)
-            if e.code == CtapError.ERR.ACTION_TIMEOUT:
-                cli_fail(
-                    "Reset failed. You need to touch your YubiKey to confirm the reset."
-                )
-            elif e.code == CtapError.ERR.NOT_ALLOWED:
-                cli_fail(
-                    "Reset failed. Reset must be triggered within 5 seconds after the "
-                    "YubiKey is inserted."
-                )
-            else:
-                cli_fail(f"Reset failed: {e.code.name}")
-        except Exception as e:
-            logger.error(e)
-            cli_fail("Reset failed.")
+    except Exception as e:
+        logger.error(e)
+        cli_fail("Reset failed.")
 
 
 def _fail_pin_error(ctx, e, other="%s"):
