@@ -1,5 +1,7 @@
 * Version 4.0.3 (unreleased)
+ ** Add support for fido reset over NFC.
  ** Bugfix: The --touch argument to piv change-management-key was ignored.
+ ** Bugfix: Don't prompt for password when importing PIV key/cert if file is invalid.
 
 * Version 4.0.2 (released 2021-04-12)
  ** Update device names.
